# currency_converter

./: .dockerignore  .env.example  .pre-commit-config.yaml  ARCHITECTURE.md  DEVELOPMENT.md  Dockerfile  NON_TECHNICAL.md  README.md  REAL_TIME_SYSTEM_DESIGN.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 0001_initial_tables.py
api/: dependencies.py  error_handlers.py  main.py
api/routes/: currency.py
api/schemas/: __init__.py  requests.py  responses.py
app/api/: dependencies.py  main.py
app/cache/: redis_manager.py
app/config/: database.py  worker.py
app/core/: circuit_breaker.py  redis_manager.py
app/database/: models.py
app/monitoring/: logger.py
app/providers/: __init__.py  base.py  base_provider.py  currencyapi.py  fixer_provider.py  fixerio.py  openexchange.py
backend/: .dockerignore  ARCHITECTURE.md  NON_TECHNICAL.md  README.md  pyproject.toml
backend/alembic/versions/: 85b7a21ba7bd_add_exchange_rate_column_to_supported_.py
backend/api/: dependencies.py  main.py
backend/api/routes/: currency.py
backend/api/schemas/: __init__.py  responses.py
backend/application/services/: __init__.py  rate_service.py
backend/config/: settings.py
backend/docker/: .env.example  docker-compose.yml  entrypoint.sh
backend/domain/models/: currency.py
backend/infrastructure/persistence/: database.py
backend/infrastructure/persistence/models/: currency.py
backend/infrastructure/persistence/repositories/: currency.py
backend/infrastructure/providers/: openexchange.py
backend/tests/unit/infrastructure/cache/: test_redis_cache.py
config/: settings.py
core/: config.py
docker/: .env.example  docker-compose.yml  entrypoint.sh
docs/: api-reference.md  api.md  deployment.md  development-guide.md
frontend/: .gitignore  Dockerfile  README.md  index.html
migrations/: env.py
scripts/: run_api.sh  run_worker.sh
(+55 files in other folders)
