[project]
name = "currency-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "currencyapicom>=0.1.1",
    "fastapi[all]>=0.116.2",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "redis>=6.4.0",
    "ruff>=0.13.0",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"


[tool.ruff]
line-length = 100
exclude = [
    "tests",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "F401"] 
