[project]
name = "currency-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.116.2",
    "httpx>=0.27.0",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "redis>=6.4.0",
    "ruff>=0.13.0",
    "sqlalchemy>=2.0.43",
    "tenacity>=9.1.2",
]



[tool.setuptools.packages.find]
include = ["api*", "application*", "config*", "domain*", "infrastructure*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = "."

[tool.bandit]
exclude = ["tests"]

[tool.ruff]
line-length = 100
exclude = [
    "tests",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]
